---
source: src/parser.rs
assertion_line: 147
expression: "parse_to_pest_tree(r#\"country = \"USA\"\"#, Rule::expr)"

---
Ok(
    [
        Pair {
            rule: ident,
            span: Span {
                str: "country",
                start: 0,
                end: 7,
            },
            inner: [],
        },
        Pair {
            rule: operator,
            span: Span {
                str: "=",
                start: 8,
                end: 9,
            },
            inner: [],
        },
        Pair {
            rule: string,
            span: Span {
                str: "\"USA\"",
                start: 10,
                end: 15,
            },
            inner: [],
        },
    ],
)
